# Prototype-pollution-detection

./: .env.example  .gitignore  CHANGELOG.md  DETECTION_LOGIC.md  LICENSE  QUICKSTART.md  README.md  TEST_COMMANDS.md  merge_safe.js  merge_vulnerable.js  pyproject.toml  requirements.txt  setup.py
crawler_sources/11_28/: 11_28_result.json
crawler_sources/11_28/Michelegallo997/SimuladorDeFinanzas/: app.js
crawler_sources/11_28/Patrick-ring-motive/sval-rhino-gs/: sval.gs
crawler_sources/11_28/Skyth631/IA/: ui.js
crawler_sources/11_28/andystefano/github-actions/: server.js
crawler_sources/11_28/crmtogether/Sage100Objects/: Sage100Objects.js
crawler_sources/11_28/habibamasry2006-wq/framer-template2/: 8.mjs
crawler_sources/11_28/hammadzaher/-/: app.js
crawler_sources/1394/manipula/: deepmerge.js
crawler_sources/CHANDRUK29/programs-concepts/: problems.js
crawler_sources/Felopsz/final-changes/: server.js
crawler_sources/Qing-xiu/test/: a.js
crawler_sources/SrMatheus2000/fixed-vuln-test/: 24.js
crawler_sources/SrMatheus2000/vuln-test/: 27.js  81.js
examples/: README.md  deep_merge.js  html_with_merge.html  new_pattern_test.html  pace_vulnerability.html  random_function.js  safe_extend.js  unsafe_extend.js
examples/example1_client_side_json_parse/: index.html  main.js  sink.js  source.js
examples/example2_server_side_nodejs/: package.json  server.js  sink.js  source.js
examples/example3_mixed_html_js/: index.html  utils.js  vulnerable.js
examples/example4_dom_chain/: app.js  dom-source.js  index.html  merge-sink.js
examples/example5_express_server/: package.json  server.js  sink.js  source.js
src/prototype_pollution_detector/: __init__.py  analysis.py  batch_analyzer.py  cli.py  config.py  crawler_orchestrator.py  detector.py  github_crawler.py  llm_analyzer.py  parser.py  paths.py  validate.py
tests/: test_analysis.py  test_cli.py  test_detector.py  test_parser.py  test_taint_analysis.py
(+27 files in other folders)
